Modified index.html navbar titles

--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
 	  
 	  
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
-		<div class="container">
-		  <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="oi oi-menu"></span> Menu
-		  </button>
-	  
-		  <div class="collapse navbar-collapse" id="ftco-nav">
-			<ul class="navbar-nav nav ml-auto">
-			  <li class="nav-item"><a href="#home-section" class="nav-link" data-toggle="collapse" data-target="#ftco-nav"><span>Home</span></a></li>
-			  <li class="nav-item"><a href="#about-section" class="nav-link" data-toggle="collapse" data-target="#ftco-nav"><span>About</span></a></li>
-			  <li class="nav-item"><a href="#resume-section" class="nav-link" data-toggle="collapse" data-target="#ftco-nav"><span>Resume</span></a></li>
-			  <li class="nav-item"><a href="#services-section" class="nav-link" data-toggle="collapse" data-target="#ftco-nav"><span>Services</span></a></li>
-			  <li class="nav-item"><a href="#skills-section" class="nav-link" data-toggle="collapse" data-target="#ftco-nav"><span>Skills</span></a></li>
-			  <li class="nav-item"><a href="#experience-section" class="nav-link" data-toggle="collapse" data-target="#ftco-nav"><span>Professional Experience</span></a></li>
-			  <li class="nav-item"><a href="#projects-shelves-section" class="nav-link" data-toggle="collapse" data-target="#ftco-nav"><span>Projects</span></a></li>
-			  <li class="nav-item"><a href="#contact-section" class="nav-link" data-toggle="collapse" data-target="#ftco-nav"><span>Contact</span></a></li>
-			</ul>
-		  </div>
-		</div>
+	    <div class="container">
+
+	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+	        <span class="oi oi-menu"></span> Menu
+	      </button>
+
+	      <div class="collapse navbar-collapse" id="ftco-nav">
+	        <ul class="navbar-nav nav ml-auto">
+	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
+	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+	          <li class="nav-item"><a href="#education-section" class="nav-link"><span>Education</span></a></li>
+	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
+	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
+	          <li class="nav-item"><a href="#experience-section" class="nav-link"><span>Professional Experience</span></a></li>
+	          <li class="nav-item"><a href="#projects-shelves-section" class="nav-link"><span>Project Shelves</span></a></li>
+	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+	        </ul>
+	      </div>
+	    </div>
 	  </nav>
-	  
 	  <section id="home-section" class="hero">
 		  <div class="home-slider  owl-carousel">
 	      <div class="slider-item ">
@@ -121,12 +121,12 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pb" id="resume-section">
+    <section class="ftco-section ftco-no-pb" id="education-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Resume</h1>
-            <h2 class="mb-4">Resume</h2>
+          	<h1 class="big big-2">Education</h1>
+            <h2 class="mb-4">Education</h2>
             <p>This section is about my academic path and career achievements.</p>
           </div>
         </div>
