modified UI and UX

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/freddy.png);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -590,7 +590,8 @@
 				</div>
 				<div class="modal-body">
 					<p>This project focuses on analyzing data related to Amazon Prime TV content to derive meaningful insights and visualizations. It provides an analytical report with various visualizations showcasing trends and patterns</p>
-					<p><strong>PDF Report Link:</strong> <a href="amazon.pdf" download>Download Report</a></p>
+					<p><strong>PDF Report Link:</strong> <a href="downloads/amazon.pdf" download>Download Report</a></p>
+
 
 
 
@@ -648,16 +649,17 @@
     </section>
 
     <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available</span> for freelancing</h2>
-						
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
-					</div>
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-7 ftco-animate text-center">
+					<h2>I'm <span>Available</span> for freelancing</h2>
+					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
+
 		<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
 			<div class="container">
 				<div class="row justify-content-center mb-5 pb-3">
