--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Freddy - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Nyanda Jr</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -63,7 +63,7 @@
 			            <h2 class="mb-4">A Professional Data-Scientist, Machine Learning Researcher,
 							Data Engineer.
 						</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-shelves-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -305,9 +305,12 @@
 			</div>
 			<div class="col-md-6 animate-box">
 			  <div class="progress-wrap ftco-animate">
-				<h3>Predictive Analytics</h3>
+				<h3>Database</h3>
 				<div class="progress">
 				  <div class="progress-bar color-4" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+					
+
+
 					<span>85%</span>
 				  </div>
 				</div>
@@ -325,7 +328,7 @@
 			</div>
 			<div class="col-md-6 animate-box">
 			  <div class="progress-wrap ftco-animate">
-				<h3>Natural Language Processing</h3>
+				<h3>NLP</h3>
 				<div class="progress">
 				  <div class="progress-bar color-6" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
 					<span>80%</span>
@@ -335,7 +338,7 @@
 			</div>
 			<div class="col-md-6 animate-box">
 			  <div class="progress-wrap ftco-animate">
-				<h3>Business Intelligence Analytics</h3>
+				<h3>BI Analytics</h3>
 				<div class="progress">
 				  <div class="progress-bar color-7" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
 					<span>80%</span>
