--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			            <h2 class="mb-4">A Professional Data-Scientist, Machine Learning Researcher,
 							Data Engineer.
 						</h2>
-			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-shelves-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="#about-section" class="btn btn-primary py-3 px-4">Read More</a> <a href="#projects-shelves-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
