modified counters in the index.html

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="50">0</strong>
+                <strong class="number" data-number="14">0</strong>
                 <span>Complete Projects</span>
               </div>
             </div>
@@ -639,14 +639,15 @@
               </div>
             </div>
           </div>
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="43">0</strong>
-                <span>Cups of coffee</span>
-              </div>
-            </div>
-          </div>
+		  <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+			<div class="block-18">
+				<div class="text">
+					<strong class="number">1500+</strong>
+					<span>Page Visits</span>
+				</div>
+			</div>
+		</div>
+		
         </div>
       </div>
     </section>
@@ -757,6 +758,7 @@
 					</div>
 				</div>
 			</div>
+			
 	
 			<div class="row">
 				<div class="col-md-12 text-center">
