--- a/index.html
+++ b/index.html
@@ -736,10 +736,10 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Quick Links</h2>
 						<ul class="list-unstyled">
-							<li><a href="#home" class="py-2 d-block">Home</a></li>
-							<li><a href="#services" class="py-2 d-block">Services</a></li>
-							<li><a href="#about" class="py-2 d-block">About</a></li>
-							<li><a href="#contact" class="py-2 d-block">Contact</a></li>
+							<li><a href="#home-section" class="py-2 d-block">Home</a></li>
+							<li><a href="#services-section" class="py-2 d-block">Services</a></li>
+							<li><a href="#about-section" class="py-2 d-block">About</a></li>
+							<li><a href="#contact-section" class="py-2 d-block">Contact</a></li>
 						</ul>
 					</div>
 				</div>
