Update hero bio and meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Freddy Nyanda - Data Scientist with 4+ years of experience in Machine Learning, Predictive Analytics, and AI Solutions.">
+        content="Freddy Nyanda - Data Scientist with 4+ years of experience in Machine Learning, specializing in Customer Analytics, Churn Prediction, and AI-Driven Insights.">
     <title>Freddy Nyanda | Data Scientist</title>
 
     <!-- Google Fonts -->
@@ -55,8 +55,10 @@
                 <h1>Freddy Nyanda</h1>
                 <span class="hero-subtitle">Data Scientist</span>
                 <p class="hero-description">
-                    4+ years developing predictive ML solutions. Specializing in Customer Analytics, Churn Prediction &
-                    AI-Driven Insights to transform data into strategic business value.
+                    With over 4 years of experience in developing end-to-end predictive machine learning solutions, I
+                    specialize in transforming complex datasets into actionable business strategies. My expertise
+                    encompasses Customer Analytics, Churn Prediction, and AI-Driven Insights, empowering organizations
+                    to drive growth and maximize value through data.
                 </p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View Projects</a>
