Make footer year dynamic

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Freddy Nyanda. All Rights Reserved.</p>
+            <p>&copy; <span id="current-year">2025</span> Freddy Nyanda. All Rights Reserved.</p>
         </div>
     </footer>
 
