content: remove Education section and add degree to Certifications

--- a/index.html
+++ b/index.html
@@ -316,20 +316,16 @@
                 <h2>Education & Certifications</h2>
             </div>
             <div class="edu-grid">
-                <!-- Education -->
-                <div class="edu-card reveal">
-                    <h3><i class="fas fa-graduation-cap text-accent"></i> Education</h3>
-                    <div class="mb-4">
-                        <h4>B.Sc. Business Information & Communication Technology</h4>
-                        <p class="text-accent">Moshi Cooperative University (2019-2022)</p>
-                        <p>Upper Second-Class Honors | GPA: 4.1/5</p>
-                    </div>
-                </div>
+                
 
                 <!-- Certifications -->
                 <div class="cert-card reveal">
                     <h3><i class="fas fa-certificate text-accent"></i> Certifications</h3>
                     <div class="cert-list">
+                        <div class="cert-item">
+                            <i class="fas fa-check-circle cert-icon"></i>
+                            <span>B.Sc. Business Information & Communication Technology</span>
+                        </div>
                         <div class="cert-item">
                             <i class="fas fa-check-circle cert-icon"></i>
                             <span>Machine Learning Data Prize Certificate (2024)</span>
